@@ -4,5 +4,6 @@ version = '1.0'
 
 setup(name='lacking',
       version=version,
+      long_description="``error",
       packages=['lacking'],
       )
