@@ -177,6 +177,7 @@ class RatingsTest(unittest.TestCase):
             "Your package does not have author_email data.",
             "Your package should have a 'url' field with a link to the project home page, or a 'project_urls' field, with a dictionary of links, or both.",
             "Your package does neither have a license field nor any license classifiers.",
+            'Your long_description is not valid ReST: \n<string>:1: (WARNING/2) Inline literal start-string without end-string.',
             "Specifying a development status in the classifiers gives users " \
             "a hint of how stable your software is.",
 
